tests/errors/references/nested_array_assign.duck
fn main() {
    const arr = [[1, 2, 3]];
    arr[0][1] = 20;
}
